syntax = "proto3";

option java_multiple_files = true;
package pl.pb.grpcexample.grpcunary;


message SumOperationRequest{
  repeated int32 numbers = 1;
}

message SumOperationResponse{
  int32 result = 1;
}


service CalculatorService{
  rpc SumOperation(SumOperationRequest) returns (SumOperationResponse);
}